<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editableEmployeeHeaderHeader"
        style="@style/HeaderItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_edit_header_margin_bottom_10dp"
        android:text="@string/fragment_edit_employee_detail_header"
        tools:text="Example header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editableEmployeeFirstNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_edit_text_input_layout_margin_bottom_5dp"
        android:hint="@string/first_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editableEmployeeFirstNameTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            tools:hint="Example hint"
            tools:text="Example text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editableEmployeeLastNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_edit_text_input_layout_margin_bottom_5dp"
        android:hint="@string/second_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editableEmployeeLastNameTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            tools:hint="Example hint"
            tools:text="Example text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editableEmployeeAgeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_edit_text_input_layout_margin_bottom_5dp"
        android:hint="@string/age_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editableEmployeeAgeTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@id/editableEmployeeGenderRadioGroup"
            android:singleLine="true"
            tools:hint="Example hint"
            tools:text="56" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/editableEmployeeGenderHeader"
        style="@style/HeaderItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_edit_header_margin_bottom_10dp"
        android:text="@string/fragment_edit_gender_header"
        tools:text="Example header" />

    <RadioGroup
        android:id="@+id/editableEmployeeGenderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RadioButton
            android:id="@+id/editableEmployeeNotDisclosedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_not_disclosed" />

        <RadioButton
            android:id="@+id/editableEmployeeMaleRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/editableEmployeeFemaleRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />

    </RadioGroup>

</LinearLayout>