<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditableStreet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/address_street_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditableStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditableCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/address_city_text"
            app:layout_constraintEnd_toEndOf="@id/layoutEditableStreet"
            app:layout_constraintStart_toStartOf="@id/layoutEditableStreet"
            app:layout_constraintTop_toBottomOf="@id/layoutEditableStreet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditableCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditableZip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/address_zip_text"
            app:layout_constraintEnd_toEndOf="@id/layoutEditableCity"
            app:layout_constraintStart_toStartOf="@id/layoutEditableCity"
            app:layout_constraintTop_toBottomOf="@id/layoutEditableCity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditableZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditableCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/address_country_text"
            app:layout_constraintEnd_toEndOf="@id/layoutEditableZip"
            app:layout_constraintStart_toStartOf="@id/layoutEditableZip"
            app:layout_constraintTop_toBottomOf="@id/layoutEditableZip">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditableCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonEditableDiscard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/fragment_edit_address_discard_button_text"
            app:layout_constraintStart_toEndOf="@id/buttonEditableConfirm"
            app:layout_constraintTop_toBottomOf="@id/layoutEditableCountry" />

        <Button
            android:id="@+id/buttonEditableConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/fragment_edit_address_add_button_text"
            app:layout_constraintStart_toStartOf="@id/layoutEditableCountry"
            app:layout_constraintTop_toBottomOf="@id/layoutEditableCountry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
