<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/homeEmployeeAddressStreetHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_home_address_header_margin_start_50dp"
        android:text="@string/address_street_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeEmployeeAddressStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_home_address_header_margin_start_10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/homeEmployeeAddressStreetHeader"
        app:layout_constraintTop_toTopOf="@id/homeEmployeeAddressStreetHeader"
        tools:text="Sw. Macierewicza 11/4" />

    <TextView
        android:id="@+id/homeEmployeeAddressZipHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_zip_text"
        app:layout_constraintStart_toStartOf="@id/homeEmployeeAddressStreetHeader"
        app:layout_constraintTop_toBottomOf="@id/homeEmployeeAddressStreetHeader" />

    <TextView
        android:id="@+id/homeEmployeeAddressZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_home_address_header_margin_start_10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/homeEmployeeAddressZipHeader"
        app:layout_constraintTop_toTopOf="@id/homeEmployeeAddressZipHeader"
        tools:text="55-211" />

    <TextView
        android:id="@+id/homeEmployeeAddressCityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_home_address_header_margin_start_10dp"
        android:text="@string/address_city_text"
        app:layout_constraintStart_toEndOf="@id/homeEmployeeAddressZip"
        app:layout_constraintTop_toTopOf="@id/homeEmployeeAddressZipHeader" />

    <TextView
        android:id="@+id/homeEmployeeAddressCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_home_address_header_margin_start_10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/homeEmployeeAddressCityHeader"
        app:layout_constraintTop_toTopOf="@id/homeEmployeeAddressCityHeader"
        tools:text="Warszawa" />

    <TextView
        android:id="@+id/homeEmployeeAddressCountryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_country_text"
        app:layout_constraintStart_toStartOf="@id/homeEmployeeAddressZipHeader"
        app:layout_constraintTop_toBottomOf="@id/homeEmployeeAddressZipHeader" />

    <TextView
        android:id="@+id/homeEmployeeAddressCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_home_address_header_margin_start_10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/homeEmployeeAddressCountryHeader"
        app:layout_constraintTop_toTopOf="@id/homeEmployeeAddressCountryHeader"
        tools:text="Polandball" />

</merge>