<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="employee"
            type="com.android.model.EmployeeItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/homeEditEmployeeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toStartOf="@id/homeDeleteEmployeeButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/homeDeleteEmployeeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/homeEditEmployeeButton" />

        <TextView
            android:id="@+id/homeEmployeeNameHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_home_employee_header_margin_start_10dp"
            android:text="@string/employee_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/homeEmployeeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_home_employee_header_margin_start_10dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/homeEmployeeNameHeader"
            app:layout_constraintTop_toTopOf="@id/homeEmployeeNameHeader"
            tools:text="Antonii Macierewicz" />

        <TextView
            android:id="@+id/homeEmployeeAgeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_home_employee_header_margin_start_10dp"
            android:text="@string/employee_age"
            app:layout_constraintStart_toStartOf="@id/homeEmployeeNameHeader"
            app:layout_constraintTop_toBottomOf="@id/homeEmployeeNameHeader" />

        <TextView
            android:id="@+id/homeEmployeeAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_home_employee_header_margin_start_10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/homeEmployeeAgeHeader"
            app:layout_constraintTop_toTopOf="@id/homeEmployeeAgeHeader"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="60" />

        <TextView
            android:id="@+id/homeEmployeeGenderHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_home_employee_header_margin_start_10dp"
            android:text="@string/employee_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeEmployeeAgeHeader" />

        <TextView
            android:id="@+id/homeEmployeeGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_home_employee_header_margin_start_10dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/homeEmployeeGenderHeader"
            app:layout_constraintTop_toTopOf="@id/homeEmployeeGenderHeader"
            tools:text="Pikachu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
